--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #12151F;
+  color: #FFF;
 }
 
 a {
@@ -11,6 +13,84 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+.navbar {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+}
+
+.app {
+  margin: 20px;
+
+}
+
+.main-video {
+  width: 300vw;
+  height: 50vh; 
+  overflow: hidden;
+  margin-bottom: 50px;
+  position: relative;
+}
+
+.main-video img {
+  width:100%;
+}
+
+.card {
+  width: 250px; 
+  height: 150px;    
+  border-radius: 5%;
+  margin: 20px;
+  filter: drop-shadow(5px 5px 10px #000 );  
+}
+
+.video-image {
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+
+.info {
+  position: relative;
+  margin-top: 30%;
+  margin-left: 50px;
+  max-width: 50%;
+}
+
+.video-overlay {
+  position: absolute;
+}
+
+.info-footer {
+  height: 100vh;
+}
+
+.account-info {
+  display: flex;
+  height: 50%;
+  margin: 20px;
+}
+
+.avatar {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+
+.franchise {
+  width: 20%;
+  background-color: #222c4b;
+  margin: 5px;
+  border-radius: 10px;
+}
+
+.video-feed {
+  display: flex;
+}
+
+.logo-wrapper {
+  padding: 10px 30px;
 }
